--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/aos/dist/aos.css",
+              "./node_modules/aos/dist/aos.js"
             ],
             "scripts": []
           },
@@ -66,6 +68,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "project:build",
+            "host": "0.0.0.0"
+          },
           "configurations": {
             "production": {
               "browserTarget": "ui:build:production"
