--- a/angular.json
+++ b/angular.json
@@ -3,13 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ui": {
+    "pome_front": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -17,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ui",
+            "outputPath": "dist/pome_front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,8 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/aos/dist/aos.css",
-              "./node_modules/aos/dist/aos.js"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
             "scripts": []
           },
@@ -68,16 +63,12 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "project:build",
-            "host": "0.0.0.0"
-          },
           "configurations": {
             "production": {
-              "browserTarget": "ui:build:production"
+              "browserTarget": "pome_front:build:production"
             },
             "development": {
-              "browserTarget": "ui:build:development"
+              "browserTarget": "pome_front:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -85,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ui:build"
+            "browserTarget": "pome_front:build"
           }
         },
         "test": {
@@ -107,6 +98,5 @@
         }
       }
     }
-  },
-  "defaultProject": "ui"
+  }
 }
