--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.7
+  aws-s3: circleci/aws-s3@3.0.0
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -32,6 +33,10 @@ jobs:
       - run:
           name: Run build
           command: npm run build
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: dist
+          to: 's3://pomefront'
 
 workflows:
   # Below is the definition of your workflow.
